# updog

./: README.md  pyproject.toml
updog/: __init__.py  __main__.py
updog/templates/: home.html
